--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "serve": "node server"
+    "start": "node server.js"
+    
   },
   "keywords": [],
   "author": "",
